@@ -1,3 +1,6 @@
+- bootloader:
+  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
+
 Version 17.33 - 27 May 2016
 
 - adjust to latest gdb
