@@ -1,3 +1,5 @@
+- drakboot:
+  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
 - running commands as user:
   o fix the fallback when the helper didn't provide the real UID (mga#18288)
   o guess the right user after the switch to polkit (mga#18288)
